# gr-packet-protocols

./: .clang-format  .cursorrules  .gitignore  CMakeLists.txt  COMMIT_GUIDELINES.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  README.md  cmake_uninstall.cmake.in  fuzzing-results.md  test-results.md  test_fixes.py  test_functional.py  test_tier4_standalone.py
cmake/: PacketProtocolsRuntimeMatch.cmake  gr_python_matches_headers.py
docs/: ADAPTIVE_FEATURES.md  ADAPTIVE_SYSTEM_ARCHITECTURE.md  COMPLETE_INTEGRATION_GUIDE.md  GRC_BLOCKS.md  MAKING_FLOWGRAPH_ADAPTIVE.md  MODULATION_CONTROL.md  PTT_CONTROL.md  QUICK_START_ADAPTIVE.md  README.md  installation.md
docs/developer/: README.md  coding-standards.md
docs/examples/: README.md
docs/protocols/: ax25.md
docs/security/: fuzzing.md
docs/user-guide/: getting-started.md
examples/: ADAPTIVE_FULL_DUPLEX_README.md  ADAPTIVE_HALF_DUPLEX_README.md  README  adaptive_full_duplex_example.grc  adaptive_full_duplex_example.py  adaptive_half_duplex_example.grc  adaptive_half_duplex_example.py  adaptive_modulation_example.py  adaptive_speed_example.py  aprs-rx.grc  ax25_kiss_example.grc  ax25_kiss_example_adaptive.grc  ax25_kiss_example_adaptive_WITH_TNC.grc  fx25_fec_example.grc  il2p_example.grc  pluto_ptt_example.py  top_block.py
gnuradio4/: .gitignore  CMakeLists.txt  README.md
gnuradio4/cmake/: gnuradio4-gr-packet-protocols.pc.in  gr-packet-protocols4-config.cmake.in
gnuradio4/include/gnuradio-4.0/: packet_protocols.hpp
gnuradio4/include/gnuradio-4.0/packet_protocols/: AdaptiveModulator.hpp  AdaptiveRateControl.hpp  Ax25Decoder.hpp  Ax25Encoder.hpp  Fx25Decoder.hpp  Fx25Encoder.hpp  Il2pDecoder.hpp  Il2pEncoder.hpp  KissTnc.hpp  LinkQualityMonitor.hpp  ModulationNegotiation.hpp
gnuradio4/include/gnuradio-4.0/packet_protocols/detail/: AdaptiveRateEngine.hpp  Ax25Protocol.hpp  FxIl2pCodec.hpp  Helpers.hpp  KissFraming.hpp  ModeList.hpp  ModulationMode.hpp  NegotiationFrame.hpp  NegotiationService.hpp  ProtocolConstants.hpp  ReedSolomon.hpp
gnuradio4/include/gnuradio-4.0/packet_protocols/detail/c/: ax25_protocol.h
gnuradio4/test/: CMakeLists.txt  qa_AdaptiveRateControl.cpp  qa_Ax25Decoder.cpp  qa_Ax25Encoder.cpp  qa_Ax25Protocol.cpp  qa_Fx25Decoder.cpp  qa_Fx25Encoder.cpp  qa_Il2pDecoder.cpp  qa_Il2pEncoder.cpp  qa_KissTnc.cpp  qa_LinkQualityMonitor.cpp  qa_PacketIqChain.cpp
grc/: CMakeLists.txt  ax25_decoder.xml  ax25_decoder.yml  ax25_encoder.xml  ax25_encoder.yml  fx25_decoder.block.yml  fx25_decoder.xml  fx25_encoder.xml  fx25_encoder.yml  il2p_decoder.xml  il2p_decoder.yml  il2p_encoder.xml  il2p_encoder.yml  kiss_tnc.xml  kiss_tnc.yml  packet_protocols_adaptive_modulator.block.yml  packet_protocols_adaptive_rate_control.block.yml  packet_protocols_ax25_decoder.block.yml  packet_protocols_ax25_encoder.block.yml  packet_protocols_fx25_decoder.block.yml  packet_protocols_fx25_encoder.block.yml  packet_protocols_il2p_decoder.block.yml  packet_protocols_il2p_encoder.block.yml  packet_protocols_kiss_tnc.block.yml  packet_protocols_link_quality_monitor.block.yml  packet_protocols_modulation_negotiation.block.yml  packet_protocols_modulation_switch.block.yml  packet_protocols_pluto_ptt_control.block.yml
include/gnuradio/packet_protocols/: adaptive_modulator.h  adaptive_rate_control.h  api.h  ax25_decoder.h  ax25_encoder.h  ax25_protocol.h  common.h  fx25_decoder.h  fx25_encoder.h  fx25_fec.h  il2p_decoder.h  il2p_encoder.h  il2p_reed_solomon.h  kiss_tnc.h  link_quality_monitor.h  modulation_negotiation.h  packet_protocols.h
lib/: CMakeLists.txt  adaptive_modulator_impl.h  adaptive_rate_control_impl.cc  adaptive_rate_control_impl.h  ax25_decoder_impl.cc  ax25_decoder_impl.h  ax25_encoder_impl.cc  ax25_encoder_impl.h  ax25_protocol.c  fx25_decoder_impl.cc  fx25_decoder_impl.h  fx25_encoder_impl.cc  fx25_encoder_impl.h  il2p_decoder_impl.cc  il2p_decoder_impl.h  il2p_encoder_impl.cc  il2p_encoder_impl.h  kiss_tnc_impl.cc  kiss_tnc_impl.h  link_quality_monitor_impl.cc  link_quality_monitor_impl.h  modulation_negotiation_impl.cc  modulation_negotiation_impl.h  negotiation_frame.cc  negotiation_frame.h  test_rs_golden_vectors.cc  test_rs_single_symbol_flip.cc
lib/ax25/: ax25_decoder_impl.cc  ax25_encoder_impl.cc  ax25_encoder_impl.h  ax25_protocol.c  ax25_protocol.h  kiss_protocol.c  kiss_protocol.h  kiss_tnc_impl.cc
lib/fx25/: fx25_decoder_impl.cc  fx25_encoder_impl.cc  fx25_fec_impl.cc  fx25_fec_impl.h  fx25_protocol.c  fx25_protocol.h
lib/il2p/: il2p_decoder_impl.cc  il2p_encoder_impl.cc  il2p_protocol.c  il2p_protocol.h  il2p_reed_solomon_impl.cc  il2p_reed_solomon_impl.h
python/: __init__.py  packet_protocols_bindings.cc
python/packet_protocols/: CMakeLists.txt  __init__.py  adaptive_modulator.py  modulation_switch.py  pluto_ptt_control.py  qa_adaptive_rate_control.py  qa_ax25_decoder.py  qa_ax25_encoder.py  qa_codec_utils.py  qa_fx25_decoder.py  qa_fx25_encoder.py  qa_gr_test_env.py  qa_il2p_decoder.py  qa_il2p_encoder.py  qa_kiss_tnc.py  qa_link_quality_monitor.py  qa_packet_iq_chain.py  qa_rs_cpp_golden_match.py  qa_rs_fec_codec.py
python/packet_protocols/bindings/: adaptive_rate_control_python.cc  ax25_decoder_python.cc  ax25_encoder_python.cc  fx25_decoder_python.cc  fx25_encoder_python.cc  il2p_decoder_python.cc  il2p_encoder_python.cc  kiss_tnc_python.cc  link_quality_monitor_python.cc  modulation_negotiation_python.cc  python_bindings.cc
python/packet_protocols/bindings/docstrings/: adaptive_rate_control_pydoc_template.h  (+3 more)
security/: README.md  SCAPY_ATTACK_VECTORS.md
security/fuzzing/: README.md
security/fuzzing/dictionaries/: ax25.dict  fx25.dict  il2p.dict  kiss.dict
security/fuzzing/harnesses/: ax25_frame_fuzz.cpp  fx25_decode_fuzz.cpp  il2p_decode_fuzz.cpp  kiss_tnc_fuzz.cpp
security/fuzzing/scripts/: create_ax25_corpus.sh  create_fx25_corpus.sh  create_il2p_corpus.sh  create_kiss_corpus.sh  quick_fuzz_test.sh  quick_libfuzzer_test.sh  run_fuzzing.sh
security/scapy_tests/: README.md  run_scapy_tests.sh  test_protocol_parsers.py  test_scapy_attack_vectors.py
tests/: CMakeLists.txt
